--- a/pricing.html
+++ b/pricing.html
@@ -165,7 +165,7 @@
                         </div>
                         <p class="text-indigo-100 mt-3 text-sm line-through opacity-75">vs. $30/month = $720 over 2
                             years</p>
-                        <p class="text-white mt-2 font-semibold">💰 Save $660 with one-time payment</p>
+                        <p class="text-white mt-2 font-semibold">Save $660 with one-time payment</p>
                         <p class="text-indigo-100 mt-4">Your entire Master's journey covered. No subscriptions, no
                             surprises.</p>
                     </div>
