--- a/results.html
+++ b/results.html
@@ -315,7 +315,7 @@
                         <div id="action-recommendations"
                             class="hidden mt-8 bg-gradient-to-br from-orange-50 to-amber-50 border-2 border-orange-200 rounded-2xl p-5 shadow-lg">
                             <div class="flex items-start mb-6">
-                                <div class="text-4xl mr-4">💡</div>
+                                <!-- Icon removed for professional look -->
                                 <div>
                                     <h3 class="text-2xl font-bold text-gray-900 mb-2">How to Close Your Gap</h3>
                                     <p class="text-gray-600">Here are practical ways to bridge your funding gap:</p>
