--- a/signupmodal.html
+++ b/signupmodal.html
@@ -187,7 +187,7 @@
             <!-- Optional Fields Section -->
             <div class="pt-4 border-t border-gray-200 space-y-5">
                 <div class="bg-indigo-50 border border-indigo-100 rounded-xl p-4">
-                    <p class="text-sm text-indigo-900 font-medium mb-1">💡 Help us personalize your experience</p>
+                    <p class="text-sm text-indigo-900 font-medium mb-1">Help us personalize your experience</p>
                     <p class="text-xs text-indigo-700">The following information is optional but helps us provide better
                         recommendations and improve your experience.</p>
                 </div>
