--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
     <title>Dashboard - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="design-tokens.css">
+    <link rel="stylesheet" href="components/components.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -75,55 +76,139 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="max-w-7xl mx-auto px-6 py-6">
-        <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-4">
+    <main class="max-w-7xl mx-auto px-6 py-6" style="background-color: var(--color-bg-primary);">
+        <!-- Header -->
+        <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6">
             <div>
-                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Welcome back, <span
+                <h1 class="text-3xl font-bold text-gray-900 mb-2">Welcome back, <span
                         id="welcome-user-name">User</span>!</h1>
-                <p class="text-gray-600 text-lg">Manage and track all your financial plans in one place</p>
+                <p class="text-gray-600 text-sm">Manage and track all your financial plans in one place</p>
             </div>
-            <a href="simulator.html"
-                class="gradient-bg text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all transform hover:-translate-y-1 mt-4 md:mt-0">
+            <a href="simulator.html" class="btn btn-primary mt-4 md:mt-0">
                 + Create New Plan
             </a>
         </div>
 
-        <!-- Gamification Section -->
-        <div id="gamification-section" class="mb-6 hidden">
-            <!-- Progress Overview -->
-            <div class="bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl p-5 text-white mb-4">
-                <div class="flex justify-between items-center mb-4">
-                    <div>
-                        <h2 class="text-2xl font-bold mb-1">Your Progress</h2>
-                        <p class="text-indigo-100">Level <span id="user-level">1</span> • <span id="user-xp">0</span> XP
-                        </p>
+        <!-- Stats Row - 4 Cards -->
+        <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-4 mb-6" id="stats-container">
+            <!-- Stat Card 1: Total Plans -->
+            <div class="stat-card stat-card-primary">
+                <div class="stat-card-header">
+                    <div class="stat-card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        </svg>
                     </div>
-                    <div class="text-right">
-                        <div class="text-4xl font-bold" id="completion-percentage">0%</div>
-                        <p class="text-sm text-indigo-100">Complete</p>
-                    </div>
+                    <span class="stat-card-label">Total Plans</span>
+                    <span class="stat-card-trend stat-card-trend-positive" id="plans-trend">+0%</span>
                 </div>
-                <div class="w-full bg-indigo-800 rounded-full h-4 overflow-hidden">
-                    <div id="progress-bar"
-                        class="bg-gradient-to-r from-yellow-400 to-orange-400 h-4 rounded-full transition-all duration-500"
-                        style="width: 0%"></div>
+                <div class="stat-card-value" id="total-plans">0</div>
+                <div class="stat-card-comparison" id="plans-comparison">No plans yet</div>
+            </div>
+
+            <!-- Stat Card 2: Avg Funding Gap -->
+            <div class="stat-card stat-card-danger">
+                <div class="stat-card-header">
+                    <div class="stat-card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    </div>
+                    <span class="stat-card-label">Avg Gap</span>
+                    <span class="stat-card-trend stat-card-trend-negative" id="gap-trend">-0%</span>
                 </div>
-                <div class="grid grid-cols-3 gap-4 mt-6">
-                    <div class="text-center">
-                        <div class="text-3xl font-bold" id="plans-count">0</div>
-                        <p class="text-sm text-indigo-100">Plans Created</p>
+                <div class="stat-card-value" id="avg-gap">$0</div>
+                <div class="stat-card-comparison" id="gap-comparison">Across all plans</div>
+            </div>
+
+            <!-- Stat Card 3: Programs Compared -->
+            <div class="stat-card stat-card-success">
+                <div class="stat-card-header">
+                    <div class="stat-card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                        </svg>
                     </div>
-                    <div class="text-center">
-                        <div class="text-3xl font-bold" id="comparisons-count">0</div>
-                        <p class="text-sm text-indigo-100">Comparisons</p>
+                    <span class="stat-card-label">Comparisons</span>
+                    <span class="stat-card-trend stat-card-trend-positive" id="comparisons-trend">+0%</span>
+                </div>
+                <div class="stat-card-value" id="total-comparisons">0</div>
+                <div class="stat-card-comparison" id="comparisons-comparison">Programs analyzed</div>
+            </div>
+
+            <!-- Stat Card 4: Days Active -->
+            <div class="stat-card stat-card-primary">
+                <div class="stat-card-header">
+                    <div class="stat-card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                        </svg>
                     </div>
+                    <span class="stat-card-label">Days Active</span>
+                    <span class="stat-card-trend stat-card-trend-positive" id="days-trend">+0%</span>
+                </div>
+                <div class="stat-card-value" id="days-active">0</div>
+                <div class="stat-card-comparison" id="days-comparison">Since you joined</div>
+            </div>
+        </div>
+
+        <!-- Main Content Grid: Chart + Sidebar -->
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 mb-6" id="main-content-grid">
+            <!-- Main Chart Area (col-span-8) -->
+            <div class="lg:col-span-8 bg-white border border-gray-200 rounded-lg p-5 shadow-card">
+                <h2 class="text-lg font-semibold text-gray-900 mb-4">Your Financial Overview</h2>
+                <div class="h-80 flex items-center justify-center text-gray-400">
                     <div class="text-center">
-                        <div class="text-3xl font-bold" id="days-active">0</div>
-                        <p class="text-sm text-indigo-100">Days Active</p>
+                        <svg class="w-16 h-16 mx-auto mb-4 text-gray-300" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                        </svg>
+                        <p class="text-sm">Create your first plan to see your financial overview</p>
                     </div>
                 </div>
             </div>
 
+            <!-- Sidebar Info (col-span-4) -->
+            <div class="lg:col-span-4 bg-white border border-gray-200 rounded-lg p-5 shadow-card">
+                <h3 class="text-lg font-semibold text-gray-900 mb-4">Quick Stats</h3>
+                <div class="space-y-4">
+                    <div>
+                        <p class="text-xs uppercase tracking-wide text-gray-500 mb-1">Total Investment</p>
+                        <p class="text-2xl font-bold text-gray-900" id="total-investment">$0</p>
+                        <p class="text-xs text-gray-500 mt-1">Across all plans</p>
+                    </div>
+                    <div>
+                        <p class="text-xs uppercase tracking-wide text-gray-500 mb-1">Total Funding</p>
+                        <p class="text-2xl font-bold text-green-600" id="total-funding">$0</p>
+                        <p class="text-xs text-gray-500 mt-1">Available resources</p>
+                    </div>
+                    <div>
+                        <p class="text-xs uppercase tracking-wide text-gray-500 mb-1">Success Rate</p>
+                        <p class="text-2xl font-bold text-indigo-600" id="success-rate">0%</p>
+                        <p class="text-xs text-gray-500 mt-1">Fully funded plans</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recent Plans Table -->
+        <div class="data-table" id="recent-plans-table">
+            <div class="data-table-header">
+                <h3 class="data-table-title">Recent Plans</h3>
+                <button class="btn btn-ghost btn-sm" onclick="window.location.href='simulator.html'">Create New</button>
+            </div>
+            <div class="data-table-body" id="plans-list">
+                <!-- Plans will be inserted here by JavaScript -->
+            </div>
+        </div>
+
+        <!-- Gamification Section (Hidden by default) -->
+        <div id="gamification-section" class="mb-6 hidden">
             <!-- Achievement Badges -->
             <div class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm mb-4">
                 <h3 class="text-xl font-bold text-gray-900 mb-6">Achievements</h3>
@@ -134,75 +219,62 @@
         </div>
 
         <!-- Empty State -->
-        <div id="empty-state" class="text-center">
-            <!-- Hero Message -->
-            <div class="mb-6">
-                <div class="text-6xl mb-4">🎓</div>
-                <h2 class="text-3xl font-bold text-gray-900 mb-3">Ready to plan your Master's abroad?</h2>
-                <p class="text-gray-600 text-lg mb-4">Join 1,247 students who created their financial plan this month
-                </p>
+        <div
+            class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+            1
+        </div>
+        <h3 class="font-bold text-gray-900 mb-2">Find Your Program</h3>
+        <p class="text-sm text-gray-600">Search from 500+ universities and programs worldwide</p>
+        </div>
+        <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
+            <div
+                class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+                2
             </div>
+            <h3 class="font-bold text-gray-900 mb-2">Add Your Finances</h3>
+            <p class="text-sm text-gray-600">Input savings, scholarships, and expected income</p>
+        </div>
+        <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
+            <div
+                class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+                3
+            </div>
+            <h3 class="font-bold text-gray-900 mb-2">Get Your Roadmap</h3>
+            <p class="text-sm text-gray-600">See your funding gap and 24-month cash flow</p>
+        </div>
+        </div>
 
-            <!-- 3-Step Visual Guide -->
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6 max-w-4xl mx-auto">
-                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
-                    <div
-                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-                        1
-                    </div>
-                    <h3 class="font-bold text-gray-900 mb-2">Find Your Program</h3>
-                    <p class="text-sm text-gray-600">Search from 500+ universities and programs worldwide</p>
+        <!-- Sample Result Preview (Expandable) -->
+        <div class="max-w-2xl mx-auto mb-6">
+            <details class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-6">
+                <summary class="cursor-pointer font-semibold text-indigo-700 text-lg">
+                    👀 See what your results will look like
+                </summary>
+                <div class="mt-4 text-left">
+                    <img src="https://via.placeholder.com/600x300/667eea/ffffff?text=Sample+Financial+Roadmap"
+                        alt="Sample Result Preview" class="rounded-xl border-2 border-indigo-300 w-full">
+                    <p class="text-sm text-gray-600 mt-3 text-center">Your personalized financial roadmap with
+                        funding gap, cash flow chart, and actionable recommendations</p>
                 </div>
-                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
-                    <div
-                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-                        2
-                    </div>
-                    <h3 class="font-bold text-gray-900 mb-2">Add Your Finances</h3>
-                    <p class="text-sm text-gray-600">Input savings, scholarships, and expected income</p>
-                </div>
-                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
-                    <div
-                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-                        3
-                    </div>
-                    <h3 class="font-bold text-gray-900 mb-2">Get Your Roadmap</h3>
-                    <p class="text-sm text-gray-600">See your funding gap and 24-month cash flow</p>
-                </div>
-            </div>
+            </details>
+        </div>
 
-            <!-- Sample Result Preview (Expandable) -->
-            <div class="max-w-2xl mx-auto mb-6">
-                <details
-                    class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-6">
-                    <summary class="cursor-pointer font-semibold text-indigo-700 text-lg">
-                        👀 See what your results will look like
-                    </summary>
-                    <div class="mt-4 text-left">
-                        <img src="https://via.placeholder.com/600x300/667eea/ffffff?text=Sample+Financial+Roadmap"
-                            alt="Sample Result Preview" class="rounded-xl border-2 border-indigo-300 w-full">
-                        <p class="text-sm text-gray-600 mt-3 text-center">Your personalized financial roadmap with
-                            funding gap, cash flow chart, and actionable recommendations</p>
-                    </div>
-                </details>
-            </div>
+        <!-- CTAs -->
+        <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+            <a href="simulator.html"
+                class="gradient-bg text-white px-10 py-4 rounded-xl font-bold text-lg inline-block hover:shadow-xl transition-all transform hover:-translate-y-1">
+                Create Your First Plan →
+            </a>
+            <a href="pricing.html"
+                class="bg-white text-indigo-600 border-2 border-indigo-200 px-10 py-4 rounded-xl font-semibold text-lg inline-block hover:bg-indigo-50 transition-all">
+                See Pricing
+            </a>
+        </div>
 
-            <!-- CTAs -->
-            <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="simulator.html"
-                    class="gradient-bg text-white px-10 py-4 rounded-xl font-bold text-lg inline-block hover:shadow-xl transition-all transform hover:-translate-y-1">
-                    Create Your First Plan →
-                </a>
-                <a href="pricing.html"
-                    class="bg-white text-indigo-600 border-2 border-indigo-200 px-10 py-4 rounded-xl font-semibold text-lg inline-block hover:bg-indigo-50 transition-all">
-                    See Pricing
-                </a>
-            </div>
-
-            <!-- Social Proof -->
-            <div class="mt-12 text-gray-500 text-sm">
-                Rated 4.9/5 by 1,000+ students
-            </div>
+        <!-- Social Proof -->
+        <div class="mt-12 text-gray-500 text-sm">
+            Rated 4.9/5 by 1,000+ students
+        </div>
         </div>
 
         <!-- Populated State -->
