Add MasterPlan logo SVG to all page navbars

--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,25 @@
     <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
+                <a href="index.html" class="flex items-center gap-3">
+                    <!-- Logo SVG -->
+                    <div class="w-10 h-10">
+                        <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3"/>
+                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1"/>
+                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB"/>
+                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB"/>
+                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1"/>
+                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8"/>
+                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF"/>
+                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC"/>
+                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA"/>
+                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5"/>
+                        </svg>
+                    </div>
+                    <!-- Text -->
+                    <span class="text-2xl font-bold gradient-text">MasterPlan</span>
+                </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="dashboard.html" id="nav-dashboard"
                         class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Dashboard</a>
