--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
                     <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
-                    <a href="signupmodal.html"
-                        class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6 py-2 rounded-lg font-semibold hover:shadow-lg transition-all">Create
-                        Free Plan</a>
+                    <a href="signupmodal.html" class="btn btn-primary">Create Free Plan</a>
                 </div>
             </div>
         </div>
@@ -146,12 +144,10 @@
                 personalized to your lifestyle and financial situation.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="signupmodal.html"
-                    class="gradient-bg text-white px-8 py-4 rounded-xl font-semibold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1">
+                <a href="signupmodal.html" class="btn btn-primary btn-lg">
                     Create Free Plan
                 </a>
-                <a href="pricing.html"
-                    class="bg-white border-2 border-gray-200 text-gray-700 px-8 py-4 rounded-xl font-semibold text-lg hover:border-gray-300 hover:shadow-lg transition-all">
+                <a href="pricing.html" class="btn btn-secondary btn-lg">
                     View Pricing
                 </a>
             </div>
