Standardize final CTA button to use btn-primary btn-lg

--- a/index.html
+++ b/index.html
@@ -284,9 +284,8 @@
                 Join thousands of students who have taken control of their financial planning
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="signupmodal.html"
-                    class="gradient-bg text-white px-8 py-4 rounded-xl font-semibold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1">
-                    Start Planning Now
+                <a href="signupmodal.html" class="btn btn-primary btn-lg">
+                    Start Planning Now →
                 </a>
             </div>
         </div>
