Standardize Calculate My Plan button to use btn-primary component

--- a/simulator.html
+++ b/simulator.html
@@ -272,16 +272,16 @@
                     <!-- Logo SVG -->
                     <div class="w-8 h-8">
                         <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3"/>
-                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1"/>
-                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB"/>
-                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB"/>
-                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1"/>
-                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8"/>
-                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF"/>
-                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC"/>
-                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA"/>
-                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5"/>
+                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
+                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1" />
+                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB" />
+                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB" />
+                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1" />
+                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8" />
+                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF" />
+                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC" />
+                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA" />
+                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5" />
                         </svg>
                     </div>
                     <!-- Text -->
@@ -1516,9 +1516,8 @@
         </script>
 
         <!-- Final CTA -->
-        <div class="text-center pt-8">
-            <button onclick="calculatePlan()"
-                class="gradient-bg text-white px-12 py-4 rounded-xl font-bold text-xl hover:shadow-2xl transition-all transform hover:-translate-y-1">
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary btn-block">
                 Calculate My Plan
             </button>
         </div>
@@ -1526,3 +1525,4 @@
 </body>
 
 </html>
+```
