Standardize all CTA buttons in dashboard and pricing pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -63,16 +63,16 @@
                     <!-- Logo SVG -->
                     <div class="w-8 h-8">
                         <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3"/>
-                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1"/>
-                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB"/>
-                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB"/>
-                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1"/>
-                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8"/>
-                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF"/>
-                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC"/>
-                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA"/>
-                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5"/>
+                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
+                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1" />
+                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB" />
+                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB" />
+                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1" />
+                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8" />
+                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF" />
+                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC" />
+                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA" />
+                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5" />
                         </svg>
                     </div>
                     <!-- Text -->
@@ -279,9 +279,11 @@
 
         <!-- CTAs -->
         <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-            <a href="simulator.html"
-                class="gradient-bg text-white px-10 py-4 rounded-xl font-bold text-lg inline-block hover:shadow-xl transition-all transform hover:-translate-y-1">
-                Create Your First Plan →
+            <a href="simulator.html" class="btn btn-primary btn-lg">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+                </svg>
+                Create Your First Plan
             </a>
             <a href="pricing.html"
                 class="bg-white text-indigo-600 border-2 border-indigo-200 px-10 py-4 rounded-xl font-semibold text-lg inline-block hover:bg-indigo-50 transition-all">
