--- a/pricing.html
+++ b/pricing.html
@@ -59,16 +59,16 @@
                     <!-- Logo SVG -->
                     <div class="w-8 h-8">
                         <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3"/>
-                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1"/>
-                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB"/>
-                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB"/>
-                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1"/>
-                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8"/>
-                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF"/>
-                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC"/>
-                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA"/>
-                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5"/>
+                            <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
+                            <path d="M20 35 L35 27 L50 35 L35 43 Z" fill="#6366F1" />
+                            <path d="M35 43 L50 35 L50 55 L35 63 Z" fill="#D1D5DB" />
+                            <path d="M35 43 L50 35 L65 43 L50 51 Z" fill="#E5E7EB" />
+                            <path d="M65 43 L80 35 L80 73 L65 81 Z" fill="#6366F1" />
+                            <path d="M65 43 L80 35 L65 27 L50 35 Z" fill="#818CF8" />
+                            <path d="M35 63 L50 55 L50 73 L35 81 Z" fill="#9CA3AF" />
+                            <path d="M50 55 L65 47 L65 81 L50 73 Z" fill="#A5B4FC" />
+                            <path d="M20 73 L35 65 L35 81 Z" fill="#4338CA" />
+                            <path d="M65 81 L80 73 L65 65 Z" fill="#4F46E5" />
                         </svg>
                     </div>
                     <!-- Text -->
@@ -239,8 +239,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="signupmodal.html"
-                    class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
+                <a href="signupmodal.html" class="btn btn-primary btn-block">
                     Get Lifetime Access Now →
                 </a>
             </div>
