Fix pricing button: use white bg for contrast on purple card

--- a/pricing.html
+++ b/pricing.html
@@ -239,7 +239,8 @@
                         </li>
                     </ul>
                 </div>
-                <a href="signupmodal.html" class="btn btn-primary btn-block">
+                <a href="signupmodal.html"
+                    class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
                     Get Lifetime Access Now →
                 </a>
             </div>
