--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Your Upgrade - MasterPlan</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="design-tokens.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
