--- a/brand-guide.html
+++ b/brand-guide.html
@@ -331,8 +331,8 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
-                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 text-center">
-                    <div class="flex justify-center mb-4">
+                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 flex flex-col items-center">
+                    <div class="flex justify-center mb-4 flex-grow items-center">
                         <div class="w-16 h-16">
                             <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
@@ -350,8 +350,8 @@
                     </div>
                     <p class="text-sm text-gray-500">64px (w-16)</p>
                 </div>
-                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 text-center">
-                    <div class="flex justify-center mb-4">
+                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 flex flex-col items-center">
+                    <div class="flex justify-center mb-4 flex-grow items-center">
                         <div class="w-12 h-12">
                             <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
@@ -369,8 +369,8 @@
                     </div>
                     <p class="text-sm text-gray-500">48px (w-12)</p>
                 </div>
-                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 text-center">
-                    <div class="flex justify-center mb-4">
+                <div class="bg-white border-2 border-gray-200 rounded-xl p-8 flex flex-col items-center">
+                    <div class="flex justify-center mb-4 flex-grow items-center">
                         <div class="w-8 h-8">
                             <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 35 L35 27 L35 65 L20 73 Z" fill="#3730A3" />
@@ -449,35 +449,35 @@
             <h3 class="text-2xl font-bold text-gray-900 mb-4">Semantic Colors</h3>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-8">
                 <div class="color-swatch">
-                    <div class="color-preview" style="background: #10B981;"></div>
+                    <div class="color-preview" style="background: #059669;"></div>
                     <div class="color-info">
                         <p class="font-bold text-gray-900">Success</p>
-                        <p class="text-sm text-gray-600">#10B981</p>
-                        <p class="text-xs text-gray-500 mt-1">emerald-500</p>
+                        <p class="text-sm text-gray-600">#059669</p>
+                        <p class="text-xs text-gray-500 mt-1">emerald-600</p>
                     </div>
                 </div>
                 <div class="color-swatch">
-                    <div class="color-preview" style="background: #EF4444;"></div>
+                    <div class="color-preview" style="background: #DC2626;"></div>
                     <div class="color-info">
                         <p class="font-bold text-gray-900">Error</p>
-                        <p class="text-sm text-gray-600">#EF4444</p>
-                        <p class="text-xs text-gray-500 mt-1">red-500</p>
+                        <p class="text-sm text-gray-600">#DC2626</p>
+                        <p class="text-xs text-gray-500 mt-1">red-600</p>
                     </div>
                 </div>
                 <div class="color-swatch">
-                    <div class="color-preview" style="background: #F59E0B;"></div>
+                    <div class="color-preview" style="background: #D97706;"></div>
                     <div class="color-info">
                         <p class="font-bold text-gray-900">Warning</p>
-                        <p class="text-sm text-gray-600">#F59E0B</p>
-                        <p class="text-xs text-gray-500 mt-1">amber-500</p>
+                        <p class="text-sm text-gray-600">#D97706</p>
+                        <p class="text-xs text-gray-500 mt-1">amber-600</p>
                     </div>
                 </div>
                 <div class="color-swatch">
-                    <div class="color-preview" style="background: #3B82F6;"></div>
+                    <div class="color-preview" style="background: #4F46E5;"></div>
                     <div class="color-info">
                         <p class="font-bold text-gray-900">Info</p>
-                        <p class="text-sm text-gray-600">#3B82F6</p>
-                        <p class="text-xs text-gray-500 mt-1">blue-500</p>
+                        <p class="text-sm text-gray-600">#4F46E5</p>
+                        <p class="text-xs text-gray-500 mt-1">indigo-600</p>
                     </div>
                 </div>
             </div>
@@ -610,7 +610,7 @@
             </p>
 
             <div class="bg-white rounded-2xl border-2 border-gray-200 p-8">
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-6">
                     <div>
                         <div class="spacing-box mb-2" style="width: 16px; height: 16px;"></div>
                         <p class="text-sm font-bold text-gray-900">XS</p>
@@ -631,6 +631,8 @@
                         <p class="text-sm font-bold text-gray-900">LG</p>
                         <p class="text-xs text-gray-500">24px / 1.5rem</p>
                     </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
                     <div>
                         <div class="spacing-box mb-2" style="width: 128px; height: 128px;"></div>
                         <p class="text-sm font-bold text-gray-900">XL</p>
@@ -647,7 +649,7 @@
                         <p class="text-xs text-gray-500">64px / 4rem</p>
                     </div>
                     <div>
-                        <div class="spacing-box mb-2" style="width: 320px; height: 64px;"></div>
+                        <div class="spacing-box mb-2" style="width: 100%; max-width: 320px; height: 64px;"></div>
                         <p class="text-sm font-bold text-gray-900">4XL</p>
                         <p class="text-xs text-gray-500">128px / 8rem</p>
                     </div>
