Redesign signup modal to follow design system: add components, update buttons, fix inputs

--- a/signupmodal.html
+++ b/signupmodal.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="design-tokens.css">
+    <link rel="stylesheet" href="components/components.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -26,68 +27,18 @@
             padding: 2rem;
         }
 
-        .gradient-bg {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"],
-        input[type="number"],
-        select {
-            border: 2px solid #e5e7eb;
-            width: 100%;
-            padding: 0.75rem 1rem;
-            border-radius: 0.5rem;
-            font-size: 1rem;
-            transition: all 0.2s;
-            background-color: white;
-            min-height: 2.75rem;
-            color: #111827;
-        }
-
-        input[type="text"]::placeholder,
-        input[type="email"]::placeholder,
-        input[type="password"]::placeholder,
-        input[type="number"]::placeholder {
-            color: #9ca3af;
-        }
-
-        select {
-            cursor: pointer;
-            appearance: none;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3E%3C/svg%3E");
-            background-position: right 0.5rem center;
-            background-repeat: no-repeat;
-            background-size: 1.5em 1.5em;
-            padding-right: 2.5rem;
-        }
-
-        select.empty-select {
-            color: #9ca3af;
-        }
-
-        select option {
-            color: #111827;
-            padding: 0.5rem;
-        }
-
-        select option[value=""] {
-            color: #9ca3af;
-        }
-
-        input[type="text"]:focus,
-        input[type="email"]:focus,
-        input[type="password"]:focus,
-        input[type="number"]:focus,
-        select:focus {
-            outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
-        }
-
         .hidden {
             display: none;
+        }
+
+        /* Custom select dropdown arrow */
+        select {
+            appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3E%3C/svg%3E");
+            background-position: right 0.75rem center;
+            background-repeat: no-repeat;
+            background-size: 1.25em 1.25em;
+            padding-right: 2.5rem;
         }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
@@ -101,7 +52,7 @@
 
 <body class="antialiased">
     <!-- Initial View -->
-    <div id="initial-view" class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-5 space-y-6">
+    <div id="initial-view" class="bg-white rounded-xl shadow-lg max-w-md w-full p-8 space-y-6">
         <div class="text-center">
             <h1 class="text-3xl font-bold text-gray-900 mb-2">One last step!</h1>
             <p class="text-lg text-gray-600">Create a free account to save your plan and access your dashboard.</p>
@@ -109,7 +60,7 @@
 
         <div class="space-y-4">
             <a href="#" onclick="handleSignup('google'); return false;"
-                class="flex items-center justify-center gap-3 bg-white border-2 border-gray-200 text-gray-700 px-6 py-3 rounded-xl font-semibold hover:border-gray-300 hover:shadow-md transition-all w-full">
+                class="btn btn-secondary btn-block flex items-center justify-center gap-3">
                 <svg class="w-5 h-5" viewBox="0 0 24 24">
                     <path fill="#4285F4"
                         d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
@@ -122,8 +73,7 @@
                 </svg>
                 Continue with Google
             </a>
-            <button onclick="showEmailForm()"
-                class="bg-gray-900 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-800 transition-all w-full">
+            <button onclick="showEmailForm()" class="btn btn-ghost btn-block">
                 Continue with Email
             </button>
         </div>
@@ -143,7 +93,7 @@
     </div>
 
     <!-- Email Form View -->
-    <div id="email-form-view" class="bg-white rounded-2xl shadow-2xl max-w-lg w-full p-5 space-y-6 hidden">
+    <div id="email-form-view" class="bg-white rounded-xl shadow-lg max-w-lg w-full p-8 space-y-6 hidden">
         <div class="text-center">
             <button onclick="showInitialView()" class="text-gray-400 hover:text-gray-600 mb-4">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -160,28 +110,32 @@
                 <label class="block text-sm font-semibold text-gray-700 mb-2">
                     First Name <span class="text-red-500">*</span>
                 </label>
-                <input type="text" id="firstName" required placeholder="Enter your first name">
+                <input type="text" id="firstName" required placeholder="Enter your first name"
+                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
             </div>
 
             <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2">
                     Last Name <span class="text-red-500">*</span>
                 </label>
-                <input type="text" id="lastName" required placeholder="Enter your last name">
+                <input type="text" id="lastName" required placeholder="Enter your last name"
+                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
             </div>
 
             <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2">
                     Email <span class="text-red-500">*</span>
                 </label>
-                <input type="email" id="email" required placeholder="your.email@example.com">
+                <input type="email" id="email" required placeholder="your.email@example.com"
+                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
             </div>
 
             <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2">
                     Password <span class="text-red-500">*</span>
                 </label>
-                <input type="password" id="password" required placeholder="Create a password" minlength="6">
+                <input type="password" id="password" required placeholder="Create a password" minlength="6"
+                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
                 <p class="text-xs text-gray-500 mt-1">Must be at least 6 characters</p>
             </div>
 
@@ -198,7 +152,8 @@
                         Age
                         <span class="text-gray-500 font-normal text-xs ml-1">(Optional)</span>
                     </label>
-                    <input type="number" id="age" min="18" max="100" placeholder="e.g., 25">
+                    <input type="number" id="age" min="18" max="100" placeholder="e.g., 25"
+                        class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
                 </div>
 
                 <div>
@@ -206,7 +161,8 @@
                         Country
                         <span class="text-gray-500 font-normal text-xs ml-1">(Optional)</span>
                     </label>
-                    <select id="country">
+                    <select id="country"
+                        class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
                         <option value="" selected>Select your country</option>
                         <option value="AF">Afghanistan</option>
                         <option value="AL">Albania</option>
@@ -413,7 +369,8 @@
                         Undergraduate Degree
                         <span class="text-gray-500 font-normal text-xs ml-1">(Optional)</span>
                     </label>
-                    <select id="undergrad">
+                    <select id="undergrad"
+                        class="w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all">
                         <option value="" selected>Select your degree</option>
                         <option value="Business">Business / Management</option>
                         <option value="Engineering">Engineering</option>
@@ -429,8 +386,7 @@
                 </div>
             </div>
 
-            <button type="submit"
-                class="gradient-bg text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all w-full">
+            <button type="submit" class="btn btn-primary btn-block">
                 Create Free Account
             </button>
             <p class="text-xs text-center text-gray-500 mt-3">No credit card required</p>
